--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
+    "openai-agents>=0.2.4",
+    "python-dotenv>=1.1.1",
     "uvicorn>=0.35.0",
 ]
