--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
     "openai-agents>=0.2.4",
+    "openmeteo-requests>=1.6.0",
     "python-dotenv>=1.1.1",
+    "requests-cache>=1.2.1",
+    "retry-requests>=2.0.0",
     "uvicorn>=0.35.0",
 ]
