--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
+    "numpy>=2.3.2",
     "openai-agents>=0.2.4",
     "openmeteo-requests>=1.6.0",
+    "pandas>=2.3.1",
+    "python-dateutil>=2.9.0.post0",
     "python-dotenv>=1.1.1",
     "requests-cache>=1.2.1",
     "retry-requests>=2.0.0",
