--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pandas>=2.3.1",
     "python-dateutil>=2.9.0.post0",
     "python-dotenv>=1.1.1",
+    "requests>=2.32.4",
     "requests-cache>=1.2.1",
     "retry-requests>=2.0.0",
     "urllib3>=2.5.0",
