--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,4 +21,4 @@ services:
       - "8000:8000"   # Localhost:8000 -> FastAPI
     volumes:
       - ./backend:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: uv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
