--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,34 @@
+version: "3.9"
 
 services:
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     container_name: frontend
     ports:
       - "3000:3000"   # Localhost:3000 -> Next.js
     environment:
       NEXT_PUBLIC_API_URL: "http://localhost:8000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     command: npm run dev
     depends_on:
       - backend
+    develop:
+      watch:
+        - path: ./frontend
+          target: /app
+          action: sync
 
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: backend
     ports:
       - "8000:8000"   # Localhost:8000 -> FastAPI
-    volumes:
-      - ./backend:/app
     command: uv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    develop:
+      watch:
+        - path: ./backend
+          target: /app
+          action: sync
